se agrego mas animaciones

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -13,6 +13,10 @@
 <!--link de font awesome-->
 <script src="https://kit.fontawesome.com/e58777d526.js" crossorigin="anonymous"></script>
 
+<!--link animaciones-->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
     <title>Nosotros - UX4P</title>
 
 </head>
@@ -76,13 +80,13 @@
   <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita pariatur, dolorem reiciendis at veniam fuga architecto voluptates delectus non mollitia, facilis suscipit provident dolorum earum ea id praesentium libero sequi doloribus, blanditiis nihil magni ipsam? Exercitationem omnis nihil dolor dignissimos.</P>
 
   <div class="foto-nosotros">
-    <img src="../img/fotopp.jpg" alt="">
+    <img src="../img/fotopp.jpg" alt="" data-aos="flip-up">
   </div>
   <div class="foto-nosotros">
-    <img class="img-2" src="../img/foto-refugio.jpg" alt="">
+    <img class="img-2" src="../img/foto-refugio.jpg" alt="" data-aos="flip-up">
   </div>
   <div class="foto-nosotros">
-    <img class="img-3" src="../img/foto-refugio3.jpg" alt="">
+    <img class="img-3" src="../img/foto-refugio3.jpg" alt="" data-aos="flip-up">
   </div>
 
 <H2 class="equipo-nosotros">Quieres formar parte de nuestro equipo?</H2>
@@ -121,5 +125,13 @@
 
 <!--link de font awesome-->
 <script src="https://kit.fontawesome.com/e58777d526.js" crossorigin="anonymous"></script>
+<!--link animaciones-->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+    AOS.init();
+  </script>
+
+
 </body>
 </html>
